--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
-*.env
-*/.env
-/env
-*/env
-
-*.config
-*/.config
-/config
-*/config
-
-*/node_modules
-
-*/bin
-*/obj
+.idea/
+.vscode/
+node_modules/
+build/
+tmp/
+temp/
