--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,5 +1,11 @@
 {
-   "synchronize": true,
+   "type": "postgres",
+   "host": "localhost",
+   "port": 5432,
+   "username": "test",
+   "password": "test",
+   "database": "kanban",
+   "synchronize": false,
    "logging": false,
    "entities": [
       "src/entity/**/*.ts"
