--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
    "license": "MIT",
    "private": false,
    "dependencies": {
-      "@types/node": "^14.0.27",
-      "pg": "^7.3.0",
-      "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.25"
    },
    "devDependencies": {
+      "@types/jest": "^26.0.8",
       "@types/node": "^8.0.29",
+      "jest": "^26.2.2",
+      "pg": "^8.3.0",
+      "reflect-metadata": "^0.1.13",
+      "ts-jest": "^26.1.4",
       "ts-node": "3.3.0",
-      "typescript": "3.3.3333"
+      "typeorm": "^0.2.25",
+      "typescript": "^3.9.7"
    },
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start": "ts-node src/index.ts",
+      "test": "jest test"
    }
 }
