--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,7 +6,7 @@
    "password": "test",
    "database": "kanban",
    "synchronize": false,
-   "logging": false,
+   "logging": true,
    "entities": [
       "src/entity/**/*.ts"
    ],
