--- a/package.json
+++ b/package.json
@@ -6,18 +6,29 @@
    "author": "shortpoet <soriano.carlitos@gmail.com>",
    "license": "MIT",
    "private": false,
-   "dependencies": {
-   },
+   "dependencies": {},
    "devDependencies": {
+      "@types/cors": "^2.8.7",
+      "@types/express": "^4.17.7",
       "@types/jest": "^26.0.8",
       "@types/node": "^8.0.29",
+      "@vue/test-utils": "^1.0.3",
+      "class-validator": "^0.12.2",
+      "cors": "^2.8.5",
+      "express": "^4.17.1",
+      "express-graphql": "^0.11.0",
+      "graphql": "^15.3.0",
       "jest": "^26.2.2",
       "pg": "^8.3.0",
       "reflect-metadata": "^0.1.13",
       "ts-jest": "^26.1.4",
       "ts-node": "3.3.0",
+      "ts-node-dev": "^1.0.0-pre.56",
+      "type-graphql": "^1.0.0-rc.3",
       "typeorm": "^0.2.25",
-      "typescript": "^3.9.7"
+      "typescript": "^3.9.7",
+      "vite": "^1.0.0-rc.4",
+      "vue-jest": "^3.0.6"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
