--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,20 @@ services:
     networks:
       - kanbannet
   
+  # https://gist.github.com/onjin/2dd3cc52ef79069de1faa2dfd456c945
   db:
-    image: latest
+    image: postgres:12
+    # restart: always
+    restart: unless-stopped
+    # file must end in .sql not .psql
+    volumes:
+      - ./sql/create_schema.sql:/docker-entrypoint-initdb.d/create_schema.sql:ro
+    env_file:
+      - '.env'
+    ports:
+      - 5432:5432
+    networks:
+      - kanbannet
 
 networks:
   kanbannet:
