api works in docker

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-COMPOSE_PROJECT_NAME=kanban
+POSTGRES_HOST=localhost
 POSTGRES_USER=test
 POSTGRES_PASSWORD=test
 POSTGRES_DB=kanban
+POSTGRES_PORT=5432
