add some linux stuff to docker

--- a/docker.env
+++ b/docker.env
@@ -1,7 +1,12 @@
 COMPOSE_PROJECT_NAME=kanban
 # https://stackoverflow.com/a/55449975/12658653
-POSTGRES_HOST=host.docker.internal
+# https://stackoverflow.com/questions/48546124/what-is-linux-equivalent-of-host-docker-internal
+# https://stackoverflow.com/questions/394230/how-to-detect-the-os-from-a-bash-script
+# https://stackoverflow.com/questions/29377853/how-to-use-environment-variables-in-docker-compose
+# https://gist.github.com/Vad1mo/9ab63f28239515d4dafd
+POSTGRES_HOST=172.17.0.1
 POSTGRES_USER=test
 POSTGRES_PASSWORD=test
 POSTGRES_DB=kanban
-POSTGRES_PORT=5432DOCKER=1
+POSTGRES_PORT=5432
+DOCKER=1
