--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     networks:
       - kanbannet
     command: yarn start
+    entrypoint: ./docker-entrypoint.sh
   
   # https://gist.github.com/onjin/2dd3cc52ef79069de1faa2dfd456c945
   db:
