--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,14 +17,14 @@ services:
       NODE_ENV: production
     ports:
       # - 3000
-      # - 4000
+      - 4000:4000
       - 5000:5000
       # - 8080
     volumes:
       - .:/usr/src/app
     networks:
       - kanbannet
-    command: yarn start
+    command: yarn start:rest
     entrypoint: ./docker-entrypoint.sh
   
   # https://gist.github.com/onjin/2dd3cc52ef79069de1faa2dfd456c945
