--- a/docker.env
+++ b/docker.env
@@ -4,6 +4,9 @@ COMPOSE_PROJECT_NAME=kanban
 # https://stackoverflow.com/questions/394230/how-to-detect-the-os-from-a-bash-script
 # https://stackoverflow.com/questions/29377853/how-to-use-environment-variables-in-docker-compose
 # https://gist.github.com/Vad1mo/9ab63f28239515d4dafd
+# host.docker.internal to map localhost to 0.0.0.0 and avoid port used by daemon
+# POSTGRES_HOST=host.docker.internal
+# linux workaround also works on windows
 POSTGRES_HOST=172.17.0.1
 POSTGRES_USER=test
 POSTGRES_PASSWORD=test
