--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
       "@types/express": "^4.17.7",
       "@types/jest": "^26.0.8",
       "@types/node": "^8.0.29",
-      "@vue/compiler-sfc": "^3.0.0-rc.5",
-      "@vue/test-utils": "^1.0.3",
+      "@vue/test-utils": "^2.0.0-beta.1",
       "class-validator": "^0.12.2",
       "cors": "^2.8.5",
       "express": "^4.17.1",
@@ -32,7 +31,7 @@
       "typeorm": "^0.2.25",
       "typescript": "^3.9.7",
       "vite": "^1.0.0-rc.4",
-      "vue-jest": "^3.0.6"
+      "vue-jest": "^5.0.0-alpha.1"
    },
    "scripts": {
       "start:rest": "ts-node src/rest/index.ts",
