--- a/docker.env
+++ b/docker.env
@@ -7,7 +7,8 @@ COMPOSE_PROJECT_NAME=kanban
 # host.docker.internal to map localhost to 0.0.0.0 and avoid port used by daemon
 # POSTGRES_HOST=host.docker.internal
 # linux workaround also works on windows
-POSTGRES_HOST=172.17.0.1
+# POSTGRES_HOST=172.17.0.1
+POSTGRES_HOST=host.docker.internal
 POSTGRES_USER=test
 POSTGRES_PASSWORD=test
 POSTGRES_DB=kanban
