--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
    "private": false,
    "dependencies": {
       "axios": "^0.19.2",
-      "vue": "^3.0.0-rc.5"
+      "vue": "^3.0.0-rc.5",
+      "core-js": "^3.6.5"
    },
    "devDependencies": {
       "@types/cors": "^2.8.7",
@@ -28,6 +29,21 @@
       "ts-node": "3.3.0",
       "ts-node-dev": "^1.0.0-pre.56",
       "type-graphql": "^1.0.0-rc.3",
+      "@typescript-eslint/eslint-plugin": "^2.33.0",
+      "@typescript-eslint/parser": "^2.33.0",
+      "@vue/cli-plugin-babel": "~4.5.0",
+      "@vue/cli-plugin-eslint": "~4.5.0",
+      "@vue/cli-plugin-router": "~4.5.0",
+      "@vue/cli-plugin-typescript": "~4.5.0",
+      "@vue/cli-plugin-unit-jest": "~4.5.0",
+      "@vue/cli-plugin-vuex": "~4.5.0",
+      "@vue/cli-service": "~4.5.0",
+      "@vue/compiler-sfc": "^3.0.0-0",
+      "@vue/eslint-config-typescript": "^5.0.2",
+      "eslint": "^6.7.2",
+      "eslint-plugin-vue": "^7.0.0-0",
+      "sass": "^1.26.5",
+      "sass-loader": "^8.0.2",
       "typeorm": "^0.2.25",
       "typescript": "^3.9.7",
       "vite": "^1.0.0-rc.4",
@@ -38,6 +54,12 @@
       "start:graph": "ts-node src/graphql/index.ts",
       "dev:rest": "ts-node-dev src/rest/index.ts",
       "dev:graph": "ts-node-dev src/graphql/index.ts",
-      "test": "jest test"
+      "test": "jest test",
+      "serve": "vue-cli-service serve",
+      "build": "vue-cli-service build",
+      "test:unit": "vue-cli-service test:unit",
+      "lint": "vue-cli-service lint",
+      "vite": "yarn vite",
+      "docker": "ts-node-dev src/graphql/index.ts && vue-cli-service serve"
    }
 }
