Saving files before refreshing line endings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,11 @@
     "outDir": "./build",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "isolatedModules": true,
-    "strict": true,
+    // "isolatedModules": true,
+    // "strict": true,
     "jsx": "preserve",
     "importHelpers": true,
-    "esModuleInterop": true,
+    // "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "types": ["webpack-env", "jest"],
