--- a/docker/Dockerfile.server.alpine
+++ b/docker/Dockerfile.server.alpine
@@ -2,9 +2,7 @@ FROM node:12.2.0-alpine
 
 WORKDIR /usr/src/app
 
-COPY package*.json ./
-
-RUN npm install -g --quiet --silent @vue/cli@next
+COPY server/package*.json ./
 
 RUN npm install --quiet --silent
 
