--- a/docker/Dockerfile.server.alpine
+++ b/docker/Dockerfile.server.alpine
@@ -1,19 +1,40 @@
 FROM node:12.2.0-alpine
 
+RUN ls
+
 WORKDIR /usr/src/app
+
+RUN ls
 
 COPY server/package*.json ./
 
+RUN ls
+
 RUN npm install --quiet --silent
 
-ENV PATH /usr/node_modules/.bin:$PATH
+RUN ls
 
-COPY . .
+COPY ./server .
+
+RUN ls
+
+RUN chmod 777 /usr/src/app/docker-entrypoint.sh \
+  && ln -s /usr/src/app/docker-entrypoint.sh /
+
+RUN echo ${PATH}
+
+ENV PATH /usr/src/app/node_modules/.bin:$PATH
+
+RUN echo ${PATH}
+
+ENV PATH /usr/src/app/docker-entrypoint.sh:$PATH
+
+RUN echo ${PATH}
 
 EXPOSE 3000
 
 LABEL maintainer="Carlos Soriano <shortpoet@github>"
 
-CMD ["yarn", "serve"]
+# CMD ["yarn", "serve"]
 
 # docker run --rm -it -v ${PWD}:/usr/src/app -v /usr/src/app/node_modules -p 3000:3000 play:alpine
