--- a/docker/Dockerfile.server.alpine
+++ b/docker/Dockerfile.server.alpine
@@ -1,40 +1,42 @@
 FROM node:12.2.0-alpine
 
-RUN ls
+# RUN ls
 
 WORKDIR /usr/src/app
 
-RUN ls
+# RUN ls
 
 COPY server/package*.json ./
 
-RUN ls
+# RUN ls
 
 RUN npm install --quiet --silent
 
-RUN ls
+# RUN ls
 
 COPY ./server .
 
-RUN ls
+# RUN ls
 
-RUN chmod 777 /usr/src/app/docker-entrypoint.sh \
-  && ln -s /usr/src/app/docker-entrypoint.sh /
+# RUN chmod 777 /usr/src/app/docker-entrypoint.sh \
+#   && ln -s /usr/src/app/docker-entrypoint.sh /
 
-RUN echo ${PATH}
+# RUN echo ${PATH}
 
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
 
-RUN echo ${PATH}
+# RUN echo ${PATH}
 
-ENV PATH /usr/src/app/docker-entrypoint.sh:$PATH
+# ENV PATH /usr/src/app/docker-entrypoint.sh:$PATH
 
-RUN echo ${PATH}
+# RUN echo ${PATH}
 
-EXPOSE 3000
+EXPOSE 4000
+
+EXPOSE 5000
 
 LABEL maintainer="Carlos Soriano <shortpoet@github>"
 
 # CMD ["yarn", "serve"]
 
-# docker run --rm -it -v ${PWD}:/usr/src/app -v /usr/src/app/node_modules -p 3000:3000 play:alpine
+# docker run --rm -it -v ${PWD}:/usr/src/app -v /usr/src/app/node_modules -p 4000:4000 -p 5000:5000 kanban.server:alpine
