fixed postgres host issue

--- a/docker.env
+++ b/docker.env
@@ -8,7 +8,17 @@ COMPOSE_PROJECT_NAME=kanban
 # POSTGRES_HOST=host.docker.internal
 # linux workaround also works on windows
 # POSTGRES_HOST=172.17.0.1
-POSTGRES_HOST=host.docker.internal
+# this is the db on the host itself
+# POSTGRES_HOST=host.docker.internal
+
+# # https://github.com/quay/clair/issues/134
+
+# https://github.com/entropic-dev/entropic/issues/190
+# https://github.com/entropic-dev/entropic/issues/190#issuecomment-499733956
+# https://stackoverflow.com/a/42742217/12658653
+# uses service name
+
+POSTGRES_HOST=db
 POSTGRES_USER=test
 POSTGRES_PASSWORD=test
 POSTGRES_DB=kanban
