--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,7 @@ services:
     # file must end in .sql not .psql
     volumes:
       - ./sql/create_schema.sql:/docker-entrypoint-initdb.d/create_schema.sql:ro
+      - ./sql/seed_data.sql:/docker-entrypoint-initdb.d/seed_data.sql:ro
       - ./postgres-data:/var/lib/postgresql/data
     env_file:
       - "docker.env"
