db linux compatible with :Z flag on vol mount

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
     volumes:
       - ./sql/create_schema.sql:/docker-entrypoint-initdb.d/create_schema.sql:ro
       - ./sql/seed_data.sql:/docker-entrypoint-initdb.d/seed_data.sql:ro
-      - ./postgres-data:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data:Z
     env_file:
       - "docker.env"
     ports:
