revert to windows/mac pg host; need to add script to check and change if linux

--- a/docker.env
+++ b/docker.env
@@ -7,7 +7,7 @@ COMPOSE_PROJECT_NAME=kanban
 # host.docker.internal to map localhost to 0.0.0.0 and avoid port used by daemon
 # POSTGRES_HOST=host.docker.internal
 # linux workaround also works on windows
-POSTGRES_HOST=172.17.0.1
+# POSTGRES_HOST=172.17.0.1
 # this is the db on the host itself
 # POSTGRES_HOST=host.docker.internal
 
@@ -18,7 +18,7 @@ POSTGRES_HOST=172.17.0.1
 # https://stackoverflow.com/a/42742217/12658653
 # uses service name
 
-# POSTGRES_HOST=db
+POSTGRES_HOST=db
 POSTGRES_USER=test
 POSTGRES_PASSWORD=test
 POSTGRES_DB=kanban
